# embed-utils

./: .clang-format  arg_checkers.h  console_color.h  container_of.h  embed-utils.code-workspace  gnu_attributes.h  linker.ld  linker_tools.h  main.c  meson.build  meson.options  options.lua  strarg.c  strarg.h  value_ops.h  xmake.lua
bitmap/: bitmap.c  bitmap.h
delay/: delay.h
linked_list/: linked_list.h  linked_list_common.h  list_iterators.h
log/: dbg_infos.h  log.c  log.h
map/: map.c  map.h
mem_mana/: mem_conf.h  mem_mana.c  mem_mana.h
ringbuf/: ringbuf.c  ringbuf.h
test_cases/: test_case_conf.h  test_cases.h  test_frame.c  test_frame.h  test_logging.h  test_typedef.h
test_cases/bitmap/: bitmap_basic.c  bitmap_clear.c
test_cases/hash/: demo.c  hash_all_test.h  hash_demo.c
test_cases/linked_list/: linked_list.c
test_cases/map/: map_basic_test.c  map_detete_clear_test.c  map_duplcate_key.c  map_test_data.h
test_cases/tiny_console/: tiny_console_basic.c
tiny_console/: tiny_console.c  tiny_console.h  tiny_console_cmd.h  tiny_console_conf.h
tiny_console/builtin_cmds/: builtin_cmds.h  help.c
usart/: prints.h
